<resources>
    <!-- english -->

    <string name="app_name">Doppelkopf</string>
    <string name="app_version">Version 3.1</string>
    <string name="start_action_about">About this App</string>
    <string name="str_saved_game">Saved games</string>
    <string name="str_login">Login</string>
    <string name="str_login_action">Login</string>
    <string name="str_saved_game_delete_all">Delete all saved game</string>
    <string name="str_saved_game_delete_all_q">Are you sure you want to delete ALL saved games?</string>
    <string name="str_saved_game_delete_q">Are you sure you want to delete the saved game?</string>
    <string name="str_saved_game_via_mail_text_1">Doppelkopf game from:</string>
    <string name="str_saved_game_via_mail_text_excel">*You can import this data into excel.
        Save data as text file and import into excel by using semicolon as separator.</string>
    Important set \".\" (dot) as decimal seperator.
    <string name="str_saved_game_via_mail_intent">Send via mail&#8230;</string>
    <string name="str_new_game">New game</string>
    <string name="str_player_name">Playername</string>
    <string name="str_clear_player_name_list">Delete name history</string>
    <string name="str_clear_player_name_list_text">Successfully cleaned player name history.</string>
    <string name="str_player_add">Add player</string>
    <string name="str_round_number">Game</string>
    <string name="str_player_required">Please setup minimum four players</string>
    <string name="str_username">Username</string>
    <string name="str_password">Password</string>
    <string name="str_server_url">Server URL</string>

    <string name="str_game_settings">Game settings</string>
    <string name="str_change_game_settings_save">Save game settings</string>
    <string name="str_change_game_settings_finish">game settings changed</string>
    <string name="str_change_game_settings_save_q">Save game settings?</string>
    <string name="str_change_game_settings_delete_bockrounds">Delete bockround</string>
    <string name="str_change_game_settings_delete_bockrounds_q">Existing bockrounds will be overwritten (deleted)</string>
    <string name="str_edit_round">Edit round</string>
    <string name="str_edit_round_nr">Edit round %1$d</string>
    <string name="str_edit_round_not_possible">You can\'t edit this round</string>
    <string name="str_edit_round_info">Edit a round with a long press on the round entry</string>
    <string name="str_edit_round_finish">Round successfully changed</string>
    <string name="str_edit_round_error">Error: round coudn\'t be changed!</string>
    <string name="str_active_player">Active players</string>
    <string name="str_bock_limit">Bocklimit</string>
    <string name="str_bock">Bock</string>
    <string name="str_bockround">Bockround</string>
    <string name="str_bockrounds">Bockrounds</string>
    <string name="str_start_game">Start</string>
    <string name="str_start">Start</string>
    <string name="str_error_player_name">Invalid, duplication or missing player name</string>
    <string name="str_image">Image</string>
    <string name="anim_inout">300</string>

    <string name="str_game_result_calc">Payoff</string>
    <string name="str_game_result_calc_btn">Calculation</string>
    <string name="str_game_result_calc_factor">Factor e.g. 0,10 (only 0&#8211;9 , . valid chars)</string>
    <string name="str_game_result_calc_factor_error">Error: Enter a valid factor (e.g. 0,05 &#8211; 0,10 &#8211; 1 &#8211; 1,5 &#8211; 2 &#8211; 10)</string>
    <string name="str_game_load">Load game&#8230;</string>
    <string name="str_saved_games_load">Load saved games&#8230;</string>
    <string name="str_game">Current game</string>
    <string name="str_game_cnt_variant">Count variant</string>
    <string name="str_game_counts">Ranked match</string>
    <string name="str_game_add_round_here">Add new round (wipe)</string>
    <string name="str_game_new_round">Add new round</string>
    <string name="str_game_add_new_round">Add round</string>
    <string name="str_game_round">Round</string>
    <string name="str_game_points">Points</string>
    <string name="str_game_points_winner_select_text">win</string>
    <string name="str_game_points_lose_select_text">lose</string>
    <string name="str_game_dealer">Dealer:</string>
    <string name="str_game_points_suspend_select_text">suspended</string>
    <string name="str_game_points_choose_bock">New bock rounds</string>
    <string name="str_game_bock_rounds_cnt">Count of bockrounds</string>
    <string name="str_game_bock_rounds_game_cnt">Games per bockround</string>
    <string name="str_game_points_choose_bock_info">Count of bockrounds:\n\nDefine how often bockrounds will be added.
    \n\nGames per bockround:\n\Defines how much games will be a bockround.
    \n\nExampels:\n\nCount of bockround = 1, Games per bockround = 4 will reuslt ind 4 new bockrounds total.
    \n\nCount of bockround = 2, Games per bockround = 5 will result ind 5 double bockrounds total.</string>

    <string name="str_error_game_new_round_data">Invalid values. Please check points and count of winner/loser/(suspended player)</string>
    <string name="str_round_type_solo">Solo</string>
    <string name="str_round_type_2vs2">2vs2</string>
    <string name="str_round_type_3vs2">3vs2</string>
    <string name="str_round_type_4vs2">4vs2</string>
    <string name="str_round_type_3vs3">3vs3</string>

    <string name="str_delete_file">Delete file</string>
    <string name="str_delete_files">Delete files</string>
    <string name="str_file_create_date">Created</string>
    <string name="str_file_absolute_path">Filepath</string>
    <string name="str_error">Error</string>
    <string name="str_exit_game">Quit game</string>
    <string name="str_exit_game_q">Do really want to quit this game?</string>
    <string name="str_error_game_start">Error: can\'t start game</string>
    <string name="str_error_load_game_for_change_game_settings">Error: game settings couldn\'t be loaded</string>

    <string name="str_dp_seperator">|</string>
    <string name="str_edit">edit</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_accept">OK</string>
    <string name="str_abort">Abort</string>
    <string name="str_plz_wait">Please wait</string>
    <string name="str_help">Help</string>
    <string name="str_apply">Apply</string>
    <string name="str_hint">Info</string>
    <string name="str_no_bock">none</string>
    <string name="str_upload_in_progress">Upload in progress&#8230;</string>
    <string name="str_upload_successful">Upload successful</string>
    <string name="str_upload_error">Upload failed</string>
    <string name="str_upload_error_code">. Status code:</string>
    <string name="str_upload_error_not_authenticated">. Login token is not valid.</string>
    <string name="str_upload_error_already_uploaded">. The game in question was already uploaded.</string>
    <string name="str_login_successful">Login successful</string>
    <string name="str_login_error">Login failed</string>
    <string name="str_login_wrong_credentials">. Combination of username and password is wrong.</string>
    <string name="str_login_error_code">. Status code:</string>
    <string name="str_login_in_progress">Login in progress&#8230;</string>

    <string name="str_dev_mode_title">Dev-Mode</string>
    <string name="str_dev_mode_text">Enter the password to activate the Dev-Mode.</string>

    <string name="str_external_storage">To save games on external storage and send games as CSV-File via Mail access to external storage is needed.</string>

    <!-- INFO/HELP -->
    <string name="str_info_cnt_cnt_variants">Count variants</string>
    <string name="str_info_cnt_cnt_variant_std_name">Standard</string>
    <string name="str_info_cnt_cnt_variant_win_name">Loser</string>
    <string name="str_info_cnt_cnt_variant_lose_name">Winner</string>
    <string name="str_info_cnt_cnt_variant_standard">Standard: \nThe losers get points subtracted, winners get points added</string>
    <string name="str_info_cnt_cnt_variant_lose">Loser: \nOnly the losing players get points subtracted. The points of the winning or suspended players will be untouched. (reverse of count variant winner).</string>
    <string name="str_info_cnt_cnt_variant_win">Winner: \nOnly the winning player get points added. The points of the losing or suspended players will be untouched. (reverse of count variant loser).</string>
    <string name="str_info_active_players_info">You can start a game with 5 players which have only 4 active player. This means that every round 1 player has to be suspended (This player can be set every round individually).</string>
    <string name="str_info_bock_cnt_info">On a bock round the round points will be doubled. Bock round limit can bet set between 0&#8211;4 (0=no doubling, I = points x2, II = points x4,III = points x8 etc.).</string>

    <string name="str_info_game">Add a new round:\n\n
    To add a new round you have to change to the add round view. You can do this by a swipe to left gesture.\n\n
        For adding a round you have to define the points of the round and which player had win or lose the new round (optinal which player set was suspended at this round).\n\n

    You can enter the points via the number pad.\n\n
    To define which player has won or lose the round simply press on the player name to change the state.\n\n
    To mark a player as suspended make a long press on his player name.</string>


    <string name="str_disclaimer">
		    Disclaimer of Warranty: \nThis Software (Android-Application) are provided on an "as-is" basis, without warranty of any kind,
		    including without limitation the warranties of merchantability, fitness for a particular purpose and
		    non-infringement. The entire risk as to the quality and performance of the computations is borne by you.
		    Should the results prove to be in error, you assume the entire cost of any required service and repair,
		    and any consequential damage. Use at your own risk. Use of the Software for your own personal and private use only. All rights reserved\n\nHaftungsausschluss:\nDiese Software (Android-Applikation) "wie sie ist" wird ohne jegliche Gewährleistung für Funktion,
			Korrektheit oder Fehlerfreiheit zur Verfügung gestellt. Für jeden direkten oder indirekten Schaden -
			insbesondere Schaden an anderer Software, schaden an Hardware, Schaden durch Nutzungsausfall,
			Schaden durch Funktionsuntüchtigkeit oder Fehler der Software, kann der Autor nicht haftbar gemacht werden.
			Ausschließlich der Benutzer haftet für die Folgen der Benutzung dieser Software.
			Diese Software wurde mit größter Sorgfalt entwickelt, jedoch können Fehler niemals ausgeschlossen werden.
			Es kann daher keine Gewähr für die Sicherheit ihrer Daten übernommen werden. Benutzung auf eigene Gefahr.
			Diese App darf ausschließlich nur von Privatpersonen und nur für private Zwecke benutzt und eingesetzt werden
            \n\nDurch die Verwendung der Software stimmen sie dem Haftungsausschluss zu.
            \n\nAlle Rechte vorbehalten

            \n\nLibs:
            \n\nMaterialDrawer:
            \n\nCopyright 2016 Mike Penz

           \n\nLicensed under the Apache License, Version 2.0 (the "License");
            you may not use this file except in compliance with the License.
            You may obtain a copy of the License at

            \n\nhttp://www.apache.org/licenses/LICENSE-2.0

            \n\nUnless required by applicable law or agreed to in writing, software
            distributed under the License is distributed on an "AS IS" BASIS,
            WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
            See the License for the specific language governing permissions and
            limitations under the License.</string>

</resources>
