<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_game_help"
        android:icon="@drawable/content_paste"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/str_help"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/menu_change_game_settings"
        android:icon="@drawable/content_select_all"
        android:orderInCategory="1"
        android:title="@string/str_game_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_edit_round"
        android:icon="@drawable/content_paste"
        android:orderInCategory="1"
        android:title="@string/str_edit_round"
        app:showAsAction="never" />


    <item
        android:id="@+id/menu_game_result"
        android:icon="@drawable/content_paste"
        android:orderInCategory="1"
        android:title="@string/str_game_result_calc"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_exit_game"
        android:icon="@drawable/content_paste"
        android:orderInCategory="1"
        android:title="@string/str_exit_game"
        app:showAsAction="never" />

</menu>