<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/activity_background_color"
    android:layout_marginRight="1dp" >

    <LinearLayout
        android:id="@+id/fragment_game_rounds_infos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal" >

            <TextView
		        android:id="@+id/fragment_game_round_number"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:text="@string/str_game_add_round_here"
		        android:gravity="center"
		        android:textColor="@color/gray_dark"
		        android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_next_item" />
            
            
    </LinearLayout>

    <ListView
        android:id="@+id/fragment_game_round_list"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/fragment_game_rounds_infos"
        android:layout_above="@id/fragment_game_bottom_infos"
        android:divider="@color/activity_background_color"
        android:dividerHeight="@dimen/item_space"
        android:fastScrollEnabled="true"
        android:keepScreenOn="true"
        android:smoothScrollbar="true" />


    <LinearLayout
        android:id="@+id/fragment_game_bottom_infos"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

		    <LinearLayout
		        android:background="@color/table_footer_background"
                android:layout_width="match_parent"
		        android:layout_height="fill_parent"
		        android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/str_game_dealer"
                    android:paddingLeft="10dp"
                    android:gravity="center"
                    android:textColor="@color/table_footer_bock_count_label"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <TextView
                    android:id="@+id/fragment_game_bottom_infos_content_dealer"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="4dp"
                    android:gravity="center"
                    android:textColor="@color/table_footer_bock_count_label"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <TextView
                    android:id="@+id/fragment_game_bottom_infos_content_separator_1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textColor="@color/table_footer_bock_counts"
                    android:text="@string/str_dp_seperator"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

		        <TextView
                    android:id="@+id/fragment_game_bottom_infos_content_bock_count_label"
                    android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:gravity="center"
                    android:textColor="@color/table_footer_bock_count_label"
		            android:text="@string/str_bockrounds"
		            android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/fragment_game_bottom_infos_content_bock_count"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="4dp"
                    android:textColor="@color/table_footer_bock_count_number"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

				<TextView
                    android:id="@+id/fragment_game_bottom_infos_content_separator_2"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:gravity="center"
					android:padding="4dp"
					android:textColor="@color/table_footer_bock_counts"
					android:text="@string/str_dp_seperator"
					android:textAppearance="?android:attr/textAppearanceSmall" />

		       <TextView
		            android:id="@+id/fragment_game_bottom_infos_content_bock_count_preview"
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:gravity="center"
		            android:lines="1"
                    android:textColor="@color/white"
		            android:textAppearance="?android:attr/textAppearanceSmall" />

		    </LinearLayout>

    </LinearLayout>



</RelativeLayout>