<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="horizontal"
	android:descendantFocusability="beforeDescendants"
	android:focusableInTouchMode="true"
	android:id="@+id/game_add_round_main_layout"
	tools:context=".game.GameActivity">


    <ScrollView
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_padding_lr"
        android:paddingRight="@dimen/activity_padding_lr">
	
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
            android:paddingTop="@dimen/item_space"
	        android:orientation="vertical" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:background="@color/white"
                android:padding="@dimen/item_space"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="48dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:text="@string/str_game_points"
                        android:paddingTop="@dimen/item_space"
                        android:gravity="center_vertical|center_horizontal"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black"/>

                    <View android:layout_width="10dp"
                        android:layout_height="fill_parent" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:orientation="vertical"
                        android:gravity="center_vertical"
                        android:layout_height="48dp">

                        <TextView
                            android:layout_marginTop="4dp"
                            android:id="@+id/game_add_round_points_entry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint=""
							android:layout_gravity="left"
                            android:clickable="false"
                            android:textStyle="normal"
                            android:gravity="center_vertical"
                            android:paddingLeft="@dimen/item_space"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/gray_dark" />

                        <View
							android:background="@color/light_gray"
                            android:layout_width = "fill_parent"
                            android:layout_height="1dip"
                            android:layout_marginTop="0dp"
                            android:layout_alignParentBottom="true"/>

                        </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/game_add_round_bock_info_container"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1.0"
                    android:layout_marginTop="@dimen/item_space"
                    android:paddingTop="@dimen/round_new_edit_padding_tb"
                    android:paddingBottom="@dimen/round_new_edit_padding_tb">

                    <TextView
                        android:id="@+id/game_add_round_bock_points"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.40"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/gray_dark" />

                    <TextView
                        android:id="@+id/game_add_round_bock_auto_calc_text"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/str_bock_auto_calc"
                        android:textColor="@color/gray_dark"
                        android:layout_weight="0.45"
                        android:gravity="right"/>

                    <TextView
                        android:id="@+id/game_add_round_bock_auto_calc_onoff"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text=""
                        android:layout_weight="0.15"
                        android:textColor="@color/black"
                        android:layout_marginLeft="4dp"/>


                </LinearLayout>

                <include layout="@layout/fragment_game_new_round_grid_point"/>

            </LinearLayout>



	        <LinearLayout
                android:layout_marginTop="@dimen/item_space"
	            android:id="@+id/game_add_round_playersection"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
                android:background="@color/white"
	            android:orientation="vertical"
                android:paddingTop="@dimen/round_new_edit_padding_tb"
                android:paddingBottom="@dimen/round_new_edit_padding_tb">



	        </LinearLayout>

			<LinearLayout
				android:id="@+id/game_add_round_bock_container"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_space"
				android:background="@color/white"
				android:orientation="horizontal"
				android:paddingBottom="@dimen/round_new_edit_padding_tb"
				android:paddingTop="@dimen/round_new_edit_padding_tb"
				android:weightSum="1.0">

				<TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
					android:layout_weight="1.00"
					android:gravity="left|center_vertical"
					android:text="@string/str_game_points_choose_bock"
					android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black" />


				<android.support.v7.widget.AppCompatCheckBox
					android:id="@+id/game_add_round_bock_cb"
					android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
					android:layout_gravity="center_vertical|right"
					android:layout_marginLeft="@dimen/round_new_edit_padding_lr"
					android:buttonTint="@color/black"
					android:gravity="right|center_horizontal"
                    android:text=""
                    app:buttonTint="@color/gray_dark" />

			</LinearLayout>

			<Button
				android:layout_marginTop="@dimen/item_space"
				android:layout_marginBottom="@dimen/item_space"
				android:id="@+id/btn_game_add_new_round"
				android:padding="15dp"
				android:textSize="22sp"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textAllCaps="false"
				android:textColor="@color/light_gray"
				android:text="@string/str_game_add_new_round"
				android:background="@drawable/bnt_style_1"
				android:elevation="4dp"/>

	    </LinearLayout>
    </ScrollView>
</LinearLayout>